@@ -11,7 +11,6 @@ import uk.gov.hmcts.reform.orgrolemapping.helper.TestDataBuilder;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
@@ -24,31 +23,60 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 @RunWith(MockitoJUnitRunner.class)
 class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
+    static final String ALL_APPOINTMENTS_CSV = """
+            President of Tribunal,Salaried
+            Principal Judge,Salaried
+            Tribunal Judge,Salaried
+            Judge of the First-tier Tribunal,Salaried
+            Circuit Judge,Salaried
+            Regional Tribunal Judge,Salaried
+            Tribunal Member Medical,Salaried
+            Tribunal Judge,Fee Paid
+            Judge of the First-tier Tribunal (sitting in retirement),Fee Paid
+            Chairman,Fee Paid
+            Recorder,Fee Paid
+            Deputy Upper Tribunal Judge,Fee Paid
+            Tribunal Member,Fee Paid
+            Tribunal Member Lay,Fee Paid
+            Advisory Committee Member - Magistrate,Voluntary
+            Magistrate,Voluntary
+            Tribunal Member Medical,Fee Paid
+            Tribunal Member Optometrist,Fee Paid
+            Tribunal Member Disability,Fee Paid
+            Member of the First-tier Tribunal (sitting in retirement),Fee Paid
+            Tribunal Member Financially Qualified,Fee Paid
+            """;
+
     //=================================SALARIED ROLES==================================
     @ParameterizedTest
     @CsvSource({
-        "President of Tribunal,Salaried,BBA2,N,'senior-judge,judge,case-allocator,task-supervisor,"
+        "President of Tribunal,BBA2,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
                 + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "President of Tribunal,Salaried,BBA2,Y,'senior-judge,judge,case-allocator,task-supervisor,"
+        "Principal Judge,BBA2,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
                 + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "Principal Judge,Salaried,BBA2,N,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
-                + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "Principal Judge,Salaried,BBA2,Y,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
-                + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "Tribunal Judge,Salaried,BBA2,N,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+        "Tribunal Judge,BBA2,'judge,hmcts-judiciary,case-allocator,"
                 + "specific-access-approver-judiciary'",
-        "Tribunal Judge,Salaried,BBA2,Y,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+        "Judge of the First-tier Tribunal,BBA2,'judge,hmcts-judiciary,case-allocator,"
                 + "specific-access-approver-judiciary'",
-        "Tribunal Member Medical,Salaried,BBA2,N,'medical,hmcts-judiciary'",
-        "Tribunal Member Medical,Salaried,BBA2,Y,'medical,hmcts-judiciary'",
+        "Circuit Judge,BBA2,'judge,hmcts-judiciary,case-allocator,"
+                + "specific-access-approver-judiciary'",
+        "Regional Tribunal Judge,BBA2,'judge,hmcts-judiciary,case-allocator,"
+                + "specific-access-approver-judiciary'",
+        "Tribunal Member Medical,BBA2,'medical,hmcts-judiciary'"
     })
+    void verifySalariedAndSptwRoles(String appointment, String serviceCode, String expectedRoles) {
+        shouldReturnSalariedRoles(appointment, "Salaried", serviceCode, "N", expectedRoles);
+        shouldReturnSalariedRoles(appointment, "Salaried", serviceCode, "Y", expectedRoles);
+        shouldReturnSalariedRoles(appointment, "SPTW", serviceCode, "N", expectedRoles);
+        shouldReturnSalariedRoles(appointment, "SPTW", serviceCode, "Y", expectedRoles);
+    }
+
     void shouldReturnSalariedRoles(String appointment, String appointmentType,
-                                  String serviceCode, String endDateNull, String expectedRoles) {
+                                   String serviceCode, String endDateNull, String expectedRoles) {
 
         judicialAccessProfiles.forEach(judicialAccessProfile -> {
             judicialAccessProfile.setAppointment(appointment);
             judicialAccessProfile.setAppointmentType(appointmentType);
-            judicialAccessProfile.setBaseLocationId("1032");
             judicialAccessProfile.getAuthorisations().forEach(a -> a.setServiceCodes(List.of(serviceCode)));
             if (endDateNull.equals("Y")) {
                 judicialAccessProfile.getAuthorisations().forEach(a -> a.setEndDate(null));
@@ -58,12 +86,12 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_wa_1_0", true));
+                buildExecuteKieSession(getAllFeatureFlagsToggleByJurisdiction("ST_CIC", true));
 
         //assertion
         assertFalse(roleAssignments.isEmpty());
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
 
         roleAssignments.forEach(r -> {
@@ -83,26 +111,31 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
     //=================================FEE-PAID ROLES==================================
     @ParameterizedTest
     @CsvSource({
-        "Tribunal Judge,Fee Paid,BBA2,N,'fee-paid-judge,hmcts-judiciary'",
-        "Tribunal Judge,Fee Paid,BBA2,Y,'fee-paid-judge,hmcts-judiciary'",
-        "Tribunal Member,Fee Paid,BBA2,N,'fee-paid-tribunal-member'",
-        "Tribunal Member,Fee Paid,BBA2,Y,'fee-paid-tribunal-member'",
-        "Tribunal Member Medical,Fee Paid,BBA2,N,'fee-paid-medical'",
-        "Tribunal Member Medical,Fee Paid,BBA2,Y,'fee-paid-medical'",
-        "Tribunal Member Lay,Fee Paid,BBA2,N,'fee-paid-tribunal-member'",
-        "Tribunal Member Lay,Fee Paid,BBA2,Y,'fee-paid-tribunal-member'",
-        "Tribunal Member Disability,Fee Paid,BBA2,N,'fee-paid-disability'",
-        "Tribunal Member Disability,Fee Paid,BBA2,Y,'fee-paid-disability'",
-        "Tribunal Member Financial,Fee Paid,BBA2,N,'fee-paid-financial'",
-        "Tribunal Member Financial,Fee Paid,BBA2,Y,'fee-paid-financial'",
+        "Tribunal Judge,Fee Paid,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Judge of the First-tier Tribunal (sitting in retirement),Fee Paid,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Chairman,Fee Paid,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Recorder,Fee Paid,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Deputy Upper Tribunal Judge,Fee Paid,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Tribunal Member,Fee Paid,BBA2,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "Tribunal Member Lay,Fee Paid,BBA2,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "Tribunal Member Medical,Fee Paid,BBA2,'fee-paid-medical,hmcts-judiciary'",
+        "Tribunal Member Optometrist,Fee Paid,BBA2,'fee-paid-medical,hmcts-judiciary'",
+        "Tribunal Member Disability,Fee Paid,BBA2,'fee-paid-disability,fee-paid-tribunal-member,hmcts-judiciary'",
+        "Member of the First-tier Tribunal (sitting in retirement),Fee Paid,BBA2,'fee-paid-disability,"
+                + "fee-paid-tribunal-member,hmcts-judiciary'",
+        "Tribunal Member Financially Qualified,Fee Paid,BBA2,'fee-paid-financial,hmcts-judiciary'"
     })
-    void shouldReturnFeePaidRoles(String appointment, String appointmentType,
-                                  String serviceCode,String endDateNull, String expectedRoles) {
+    void verifyFeePaidRoles(String appointment, String appointmentType, String serviceCode, String expectedRoles) {
+        shouldReturnFeePaidRoles(appointment, appointmentType, serviceCode, "N", expectedRoles);
+        shouldReturnFeePaidRoles(appointment, appointmentType, serviceCode, "Y", expectedRoles);
+    }
+
+    void shouldReturnFeePaidRoles(String appointment, String appointmentType, String serviceCode,
+                                  String endDateNull, String expectedRoles) {
 
         judicialAccessProfiles.forEach(judicialAccessProfile -> {
             judicialAccessProfile.setAppointment(appointment);
             judicialAccessProfile.setAppointmentType(appointmentType);
-            judicialAccessProfile.setBaseLocationId("1032");
             judicialAccessProfile.setTicketCodes(List.of("376"));
             judicialAccessProfile.getAuthorisations().forEach(a -> {
                 a.setServiceCodes(List.of(serviceCode));
@@ -116,7 +149,7 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_wa_1_0", true));
+                buildExecuteKieSession(getAllFeatureFlagsToggleByJurisdiction("ST_CIC", true));
 
         //assertion
         assertFalse(roleAssignments.isEmpty());
@@ -135,19 +168,57 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
         });
     }
 
-    // Invalid authorisation(expired enddate) and valid appointment(Salaried) and base location(1032)
     @ParameterizedTest
     @CsvSource({
-        "President of Tribunal",
-        "Principal Judge",
-        "Tribunal Judge",
-        "Tribunal Member Medical"
+        "Advisory Committee Member - Magistrate,Voluntary,BBA2,'magistrate'",
+        "Magistrate,Voluntary,BBA2,'magistrate'"
     })
-    void shouldNotReturnSalariedRolesExpiredEndDate(String appointment) {
+    void verifyVoluntaryRoles(String appointment, String appointmentType, String serviceCode, String expectedRoles) {
+        shouldReturnVoluntaryRoles(appointment, appointmentType, serviceCode, "N", expectedRoles);
+        shouldReturnVoluntaryRoles(appointment, appointmentType, serviceCode, "Y", expectedRoles);
+    }
+
+    void shouldReturnVoluntaryRoles(String appointment, String appointmentType, String serviceCode,
+                                    String endDateNull, String expectedRoles) {
+
+        judicialAccessProfiles.forEach(judicialAccessProfile -> {
+            judicialAccessProfile.setAppointment(appointment);
+            judicialAccessProfile.setAppointmentType(appointmentType);
+            judicialAccessProfile.setTicketCodes(List.of("376"));
+            judicialAccessProfile.getAuthorisations().forEach(a -> {
+                a.setServiceCodes(List.of(serviceCode));
+                a.setTicketCode("376");
+
+            });
+            if (endDateNull.equals("Y")) {
+                judicialAccessProfile.getAuthorisations().forEach(a -> a.setEndDate(null));
+            }
+        });
+
+        //Execute Kie session
+        List<RoleAssignment> roleAssignments =
+                buildExecuteKieSession(getAllFeatureFlagsToggleByJurisdiction("ST_CIC", true));
+
+        //assertion
+        assertFalse(roleAssignments.isEmpty());
+        assertEquals(expectedRoles.split(",").length, roleAssignments.size());
+        roleAssignments.forEach(r -> {
+            assertEquals(judicialAccessProfiles.stream().iterator().next().getUserId(), r.getActorId());
+            assertEquals("Voluntary", r.getAttributes().get("contractType").asText());
+            assertEquals("[376]", r.getAuthorisations().toString());
+            assertEquals("primary location", r.getAttributes().get("primaryLocation").asText());
+            assertEquals("ST_CIC", r.getAttributes().get("jurisdiction").asText());
+        });
+    }
+
+    // Invalid authorisation(expired enddate) and valid appointment(Salaried/Fee Paid/Voluntary)
+    @ParameterizedTest
+    @CsvSource(textBlock = ALL_APPOINTMENTS_CSV)
+    void shouldNotReturnRolesExpiredEndDate(String appointment, String appointmentType) {
 
         JudicialAccessProfile profile = TestDataBuilder.buildJudicialAccessProfile();
         profile.setAppointment(appointment);
-        profile.setAppointmentType("Salaried");
+        profile.setAppointmentType(appointmentType);
         profile.setBaseLocationId("1032");
         judicialAccessProfiles.add(profile);
         judicialAccessProfiles.forEach(profiles -> profiles.setAuthorisations(
@@ -156,54 +227,20 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
+                buildExecuteKieSession(getAllFeatureFlagsToggleByJurisdiction("ST_CIC", true));
 
         //assertion
         assertTrue(roleAssignments.isEmpty());
     }
 
-    // Invalid authorisation(expired enddate) and valid appointment(Fee Paid) and base location(1032)
+    //Invalid authorisation(wrong servicecode) and valid appointment(Salaried/Fee Paid/Voluntary)
     @ParameterizedTest
-    @CsvSource({
-        "Tribunal Judge",
-        "Tribunal Member",
-        "Tribunal Member Medical",
-        "Tribunal Member Lay",
-        "Tribunal Member Disability",
-        "Tribunal Member Financial"
-    })
-    void shouldNotReturnFeePaidRolesExpiredEndDate(String appointment) {
+    @CsvSource(textBlock = ALL_APPOINTMENTS_CSV)
+    void shouldNotReturnRolesWrongServiceCode(String appointment, String appointmentType) {
 
         JudicialAccessProfile profile = TestDataBuilder.buildJudicialAccessProfile();
         profile.setAppointment(appointment);
-        profile.setAppointmentType("Fee Paid");
-        profile.setBaseLocationId("1032");
-        judicialAccessProfiles.add(profile);
-        judicialAccessProfiles.forEach(profiles -> profiles.setAuthorisations(
-                List.of(Authorisation.builder().serviceCodes(List.of("BBA2")).endDate(LocalDateTime.now()
-                        .minusMonths(5)).build())));
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
-
-        //assertion
-        assertTrue(roleAssignments.isEmpty());
-    }
-
-    //Invalid authorisation(wrong servicecode) and valid appointment and base location(1032)
-    @ParameterizedTest
-    @CsvSource({
-        "President of Tribunal",
-        "Principal Judge",
-        "Tribunal Judge",
-        "Tribunal Member Medical"
-    })
-    void shouldNotReturnSalariedRolesWrongServiceCode(String appointment) {
-
-        JudicialAccessProfile profile = TestDataBuilder.buildJudicialAccessProfile();
-        profile.setAppointment(appointment);
-        profile.setAppointmentType("Salaried");
+        profile.setAppointmentType(appointmentType);
         profile.setBaseLocationId("1032");
         judicialAccessProfiles.add(profile);
         judicialAccessProfiles.forEach(profiles -> profiles.setAuthorisations(
@@ -212,87 +249,7 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
-
-        //assertion
-        assertTrue(roleAssignments.isEmpty());
-    }
-
-    //Invalid authorisation(wrong servicecode) and valid appointment and base location(1032)
-    @ParameterizedTest
-    @CsvSource({
-        "Tribunal Judge",
-        "Tribunal Member",
-        "Tribunal Member Medical",
-        "Tribunal Member Lay",
-        "Tribunal Member Disability",
-        "Tribunal Member Financial"
-    })
-    void shouldNotReturnFeePaidRolesWrongServiceCode(String appointment) {
-
-        JudicialAccessProfile profile = TestDataBuilder.buildJudicialAccessProfile();
-        profile.setAppointment(appointment);
-        profile.setAppointmentType("Fee Paid");
-        profile.setBaseLocationId("1032");
-        judicialAccessProfiles.add(profile);
-        judicialAccessProfiles.forEach(profiles -> profiles.setAuthorisations(
-                List.of(Authorisation.builder().serviceCodes(List.of("wrong service code"))
-                        .build())));
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
-
-        //assertion
-        assertTrue(roleAssignments.isEmpty());
-    }
-
-    //wrong base location(1032) and valid authorisation(servicecode) and valid appointment
-    @ParameterizedTest
-    @CsvSource({
-        "Tribunal Member Medical",
-    })
-    void shouldNotReturnSalariedRolesWrongBaseLocation(String appointment) {
-
-        JudicialAccessProfile profile = TestDataBuilder.buildJudicialAccessProfile();
-        profile.setAppointment(appointment);
-        profile.setAppointmentType("Salaried");
-        profile.setBaseLocationId("999999");
-        judicialAccessProfiles.add(profile);
-        judicialAccessProfiles.forEach(profiles -> profiles.setAuthorisations(
-                List.of(Authorisation.builder().serviceCodes(List.of("BBA2"))
-                        .build())));
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
-
-        //assertion
-        assertTrue(roleAssignments.isEmpty());
-    }
-
-    //wrong base location(1032) and valid authorisation(servicecode) and valid appointment
-    @ParameterizedTest
-    @CsvSource({
-        "Tribunal Member Lay",
-        "Tribunal Member Medical",
-        "Tribunal Member Disability",
-        "Tribunal Member Financial",
-    })
-    void shouldNotReturnFeePaidRolesWrongBaseLocation(String appointment) {
-
-        JudicialAccessProfile profile = TestDataBuilder.buildJudicialAccessProfile();
-        profile.setAppointment(appointment);
-        profile.setAppointmentType("Fee Paid");
-        profile.setBaseLocationId("999999");
-        judicialAccessProfiles.add(profile);
-        judicialAccessProfiles.forEach(profiles -> profiles.setAuthorisations(
-                List.of(Authorisation.builder().serviceCodes(List.of("BBA2"))
-                        .build())));
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
+                buildExecuteKieSession(getAllFeatureFlagsToggleByJurisdiction("ST_CIC", true));
 
         //assertion
         assertTrue(roleAssignments.isEmpty());
